# ollana

./: AGENT.md  AGENTS.md  Cargo.toml  Cross.toml  Makefile.toml  README.md  build.rs  config.toml.example
.github/workflows/: ci-publish.yml  ci-release.yml  ci.yml
docs/: architecture-overview.excalidraw  architecture-overview.md  cli-arguments.md  cli-quick-reference.md  configuration.md  implementation-cli-parsing.md
proto/: discovery.proto
src/: args.rs  certs.rs  client_discovery.rs  client_manager.rs  client_proxy.rs  config.rs  constants.rs  device.rs  discovery.rs  error.rs  lib.rs  main.rs  manager.rs  ollama.rs  ollana.rs  provider.rs  proxy.rs  serve_app.rs  server_discovery.rs  server_health_monitor.rs  server_manager.rs  server_proxy.rs
